<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/status_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/status"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status_header"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/press_start"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status_header" />


                <TextView
                    android:id="@+id/dashboard_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/dashboard"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status" />

                <LinearLayout
                    android:id="@+id/dashboard_body"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_header">
                    <!-- Sleeps Card -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:background="@color/dash_nights"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="0dp" />

                        <TextView
                            android:id="@+id/dashboard_sleeps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/textColor"
                            android:textSize="24sp"
                            tools:text="87" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sleeps"
                            android:textAlignment="center"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:paddingVertical="4dp" />
                    </LinearLayout>

                    <!-- Daily Card -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:background="@color/dash_daily"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="0dp" />

                        <TextView
                            android:id="@+id/dashboard_daily"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/textColor"
                            android:textSize="24sp"
                            tools:text="08:00" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/daily_average_string"
                            android:textAlignment="center"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:paddingVertical="4dp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/past_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dashboard_body"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/past"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_body" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleeps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/layout_sleep_item" />
        <TextView
            android:id="@+id/no_sleeps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/no_sleeps"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/start_stop_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/fab_btn_corner"
        android:gravity="center_vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start"
            android:src="@drawable/ic_start"
            app:borderWidth="0dp"
            app:elevation="0dp" />

        <TextView
            android:id="@+id/start_stop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorFabText" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
